# agl-service-nfc

./: .gitignore  .gitreview  CMakeLists.txt  README.md
autobuild/linux/: autobuild
binding/: CMakeLists.txt  afm-nfc-binding.c  afm-nfc-common.h
conf.d/cmake/: config.cmake
conf.d/wgt/: config.xml.in
htdocs/nfc/: index.html  nfc-binding.js
src/: CMakeLists.txt  api.c  libnfc_reader.c  libnfc_reader.h  nfc-binding.c  nfc-binding.h  stringutils.h
test/afb-test/etc/: CMakeLists.txt  aft-agl-nfc.json
test/afb-test/tests/: CMakeLists.txt  nfc.lua
